feat(build): Add debugging for OOM